<resources>
    <string name="app_name">Readow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="this_is_for_recyclerview_rss_links_list">This is for Recyclerview rss links list</string>
    <string name="hello_world">Hello world</string>
    <string name="choose_your_local_feeds">Choose your Local feeds</string>
    <string name="agency">Agency</string>
    <string name="local_feed">Local Feeds</string>
    <string name="category">Category</string>
    <string name="add_feed">Add feed</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="image">Image</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="ok">Ok</string>
    <string name="home">Home</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="name">Name</string>
    <string name="tick">Tick Mark</string>
    <string name="time">Time</string>
    <string name="close">Close</string>
    <string name="refresh">Refresh</string>
    <string name="dark_mode">Dark mode</string>
    <string name="title_activity_settings_actiity">SettingsActiity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="share">Share</string>
    <string name="logo">Logo</string>
    <string name="read_later">Read later >>></string>
    <string name="title_activity_read_later">ReadLaterActivity</string>
    <string name="my_saved_aricles">My Saved Aricles</string>
</resources>